fixed FTS sizing on mobile

--- a/css/WSU_layout.css
+++ b/css/WSU_layout.css
@@ -146,7 +146,7 @@
     }
 
     #fts_box_text_static{
-        width:100%;
+        width:95%;
     }
 }
 
